--- a/package.json
+++ b/package.json
@@ -2,13 +2,26 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "production": "mix --production"
     },
     "devDependencies": {
+        "@webpack-cli/generators": "^0.1.9",
         "axios": "^0.27",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vite": "^3.0.0"
+        "sass": "^1.55.0",
+        "vite": "^3.0.0",
+        "webpack-cli": "^4.10.0"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^3.1.0",
+        "vue": "^3.2.36"
     }
 }
